--- a/i3/config
+++ b/i3/config
@@ -159,6 +159,7 @@ mode "resize" {
 }
 
 bindsym Mod4+r mode "resize"
+bindsym Mod4+n exec --no-startup-id nemo
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
