--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact", "typescript", "typescriptreact", "lua"],
+  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact", "typescript", "typescriptreact", "lua", "json"],
   "tsserver.formatOnType": true,
   "coc.preferences.formatOnType": false,
   "languageserver": {
