ADDED bumblebee status

--- a/i3/config
+++ b/i3/config
@@ -185,17 +185,11 @@ bar {
                 urgent_workspace   #FF5555 #FF5555 #F8F8F2
                 binding_mode       #FF5555 #FF5555 #F8F8F2
         }
-        status_command i3status
+        status_command bumblebee-status \
+     -m cpu memory pasink pasource time battery \
+     -p time.format="%H:%M" \
+     -t dracula-powerline \
+     -a cpu memory
 }
 
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.config/i3/config (or $XDG_CONFIG_HOME/i3/config if set) or
-# ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-exec i3-config-wizard
+# exec i3-config-wizard
