--- a/office-ergo/nvim/coc-settings.json
+++ b/office-ergo/nvim/coc-settings.json
@@ -1,21 +1,7 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-    "css",
-    "markdown",
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact",
-    "lua",
-    "json",
-    "go",
-    "python",
-    "handlebars",
-    "html",
-    "djhtml"
-  ],
   "tsserver.formatOnType": true,
   "coc.preferences.formatOnType": false,
+  "python.formatting.provider": "black",
   "languageserver": {
     "dockerfile": {
       "command": "docker-langserver",
@@ -31,5 +17,25 @@
       }
     }
   },
-  "colors.filetypes": ["*"]
+  "colors.filetypes": ["*"],
+  "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "markdown",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "lua",
+    "json",
+    "go",
+    "python",
+    "handlebars",
+    "html",
+    "djhtml",
+    "prisma",
+    "svelte"
+  ],
+  "svelte.enable-ts-plugin": true,
+  "Lua.telemetry.enable": false,
+  "sumneko-lua.enableNvimLuaDev": true
 }
