--- a/office-ergo/i3/config
+++ b/office-ergo/i3/config
@@ -2,9 +2,9 @@
 font pango:Hack 9
 
 for_window [class="^.*"] border pixel 2
-for_window [class="^Pidgin$" window_role="^conversation$"] resize grow width 0 px or 30 ppt
-for_window [window_role="buddy_list"] focus; resize shrink width 50 ppt
-for_window [window_role="conversation"] focus; move absolute left
+# for_window [class="^Pidgin$" window_role="^conversation$"] resize grow width 0 px or 30 ppt
+# for_window [window_role="buddy_list"] focus; resize shrink width 50 ppt
+# for_window [window_role="conversation"] focus; move absolute left
 
 gaps inner 10
 
