--- a/office-ergo/polybar/config.ini
+++ b/office-ergo/polybar/config.ini
@@ -37,13 +37,13 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+; border-size = 4pt
 
-padding-left = 1
-padding-right = 1
-padding-top = 1
+; padding-left = 1
+; padding-right = 1
+; padding-top = 1
 
-module-margin = 1
+; module-margin = 1
 
 separator = |
 separator-foreground = ${colors.secondary}
@@ -76,7 +76,7 @@ enable-ipc = true
 [module/logo]
 type = custom/text
 content =  
-content-padding = 4
+content-padding = 2
 content-foreground = ${colors.primary}
 click-left = rofi -modi drun -show drun
 click-right = rofi -modi run -show run
