--- a/i3/config
+++ b/i3/config
@@ -18,7 +18,7 @@ exec --no-startup-id flameshot
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id copyq
 exec --no-startup-id powerkit
-
+exec --no-startup-id qbittorrent
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
