--- a/office-ergo/polybar/config.ini
+++ b/office-ergo/polybar/config.ini
@@ -50,12 +50,13 @@ separator-foreground = ${colors.secondary}
 
 tray-position = right
 
-font-0 = MesloLGSNerdFontMono:style=Regular:size=11
+font-0 = JetBrainsMono:style=Regular:size=11
+font-2 = MesloLGSNerdFontMono:style=Regular:size=11
 ; 1px lower for up/down
-font-1 = Symbola:style=Regular:size=11
+font-3 = Symbola:style=Regular:size=11
 ; ; 2px lower for datetime
 ; font-2 = Hack:style=Regular:size=10;2
-; font-3 = FontAwesome:style=Regular:pixelsize=10
+font-1 = FontAwesome:style=Regular:pixelsize=10
 
 modules-left = logo xworkspaces i3 eth
 modules-center = xwindow
