added sidebar and mics plugins

--- a/office-ergo/tmux/tmux.conf
+++ b/office-ergo/tmux/tmux.conf
@@ -23,6 +23,7 @@ bind -r m resize-pane -Z
 set -g mouse on
 
 set-window-option -g mode-keys vi
+set-option -sa terminal-overrides ',XXX:RGB'
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
