more new configs

--- a/office-ergo/tmux/tmux.conf
+++ b/office-ergo/tmux/tmux.conf
@@ -41,10 +41,11 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+set -g @continuum-boot 'on'
 set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continumm-restore 'on'
-set -g @continuum-boot 'on'
 set -g @catppuccin_flavour 'mocha'
 
 # Other examples:
