added stow systm, sway, foot and wayland settings

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ plugged/*
 office-ergo/tmux/plugins/*
 !office-ergo/tmux/plugins/.gitkeep
 office-ergo/nvim/plugin/packer_compiled.lua
+ranger/.config/ranger/plugins/ranger_udisk_menu/.git
