--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,9 @@
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
-include current-theme.conf
+include Catppuccin-Mocha.conf
+
+font_family      Hack Nerd Font
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 # END_KITTY_THEME
