--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -64,16 +64,18 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 3
-    blur = true
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
-
     drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+        new_optimizations = true
+    }
 }
+
 
 animations {
     enabled = true
