--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -70,10 +70,13 @@ decoration {
     col.shadow = rgba(1a1a1aee)
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 6
+        passes = 2
         new_optimizations = true
     }
+    active_opacity = 1.0
+    inactive_opacity = 0.8
+    fullscreen_opacity = 1.0
 }
 
 
