--- a/hyperland/.config/hypr/hyprpaper.conf
+++ b/hyperland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/njayman/Pictures/Wallpaper/wallpaper-1.jpg
-wallpaper = eDP-1, /home/njayman/Pictures/Wallpaper/wallpaper-1.jpg
+preload = /home/njayman/Pictures/Wallpaper/tokyonight.png
+wallpaper = eDP-1,/home/njayman/Pictures/Wallpaper/tokyonight.png
