--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,8 +2,13 @@
 # Catppuccin-Mocha
 include Catppuccin-Mocha.conf
 
-font_family      Hack Nerd Font
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      	Hack Nerd Font
+bold_font        	JetBrains Mono Bold
+italic_font      	JetBrains Mono Italic
+bold_italic_font 		JetBrains Mono Bold Italic
+dynamic_background_opacity 	yes
+background_opacity 		0.3
+background_blur			0.9
+
+visual_bell_duration		0.5
 # END_KITTY_THEME
