added minimal kitty config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,13 +2,15 @@
 # Catppuccin-Mocha
 include Catppuccin-Mocha.conf
 
-font_family      	Hack Nerd Font
-bold_font        	JetBrains Mono Bold
-italic_font      	JetBrains Mono Italic
-bold_italic_font 		JetBrains Mono Bold Italic
+font_family      JetBrainsMono Nerd Font
+bold_font        auto 
+italic_font      auto 
+bold_italic_font auto 
+
 dynamic_background_opacity 	yes
 background_opacity 		0.3
 background_blur			0.9
+disable_ligatures   cursor
 
 visual_bell_duration		0.5
 # END_KITTY_THEME
