fixed background opacity for kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@ bold_font        auto
 italic_font      auto 
 bold_italic_font auto 
 
-dynamic_background_opacity  yes
-background_opacity          0.3
-background_blur             1
-disable_ligatures   cursor
+dynamic_background_opacity 	yes
+background_opacity 		0.8
+disable_ligatures       cursor
+cursor_shape            beam
 
 visual_bell_duration        0.5
 # END_KITTY_THEME
