added hyprland new config

--- a/hyperland/.config/hypr/hyprpaper.conf
+++ b/hyperland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/njayman/Pictures/Wallpaper/tokyonight.png
-wallpaper = eDP-1,/home/njayman/Pictures/Wallpaper/tokyonight.png
+preload = /home/njayman/Pictures/wallpapers/spiderman.png
+wallpaper = , /home/njayman/Pictures/wallpapers/spiderman.png
