--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
+source=~/.config/hypr/mocha.conf
 
 
 ################
@@ -64,6 +65,7 @@ exec-once = dunst # start notification demon
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = hyprpaper
+exec-once = hyprctl setcursor Catppuccin-Mocha-Dark 24
 
 
 #############################
@@ -77,11 +79,13 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1
+# env = HYPRCURSOR_THEME,Catppuccin-Mocha-Dark
+# env = HYPRCURSOR_SIZE,24
 
 #####################
 ### LOOK AND FEEL ###
@@ -227,11 +231,11 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, D, exec, $menu
 bind = $mainMod, L, exec, $scrPath/lockscreen.sh
 bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod SHIFT, R, exec, $cliMenu
+bind = $mainMod SHIFT, D, exec, $cliMenu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
