--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ source=~/.config/hypr/mocha.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,1366x768@60,0x0,1
 
 
 ###################
@@ -95,8 +95,8 @@ env = GDK_SCALE,1
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 3
+    gaps_out = 11
 
     border_size = 2
 
