--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -37,8 +37,8 @@ monitor=eDP-1,1366x768@60,0x0,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
-$cliMenu = wofi --show run
+$menu = rofi -show drun -icon-theme "Papirus" -show-icons
+$cliMenu = rofi -show run -terminal kitty
 $scrPath = $HOME/.local/share/bin
 
 
@@ -62,8 +62,10 @@ exec-once = blueman-applet # systray app for Bluetooth
 exec-once = udiskie --no-automount --smart-tray # front-end that allows to manage removable media
 exec-once = nm-applet --indicator # systray app for Network/Wifi
 exec-once = dunst # start notification demon
-exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
-exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
+exec-once = clipse -listen
+# exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
+# exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
+# exec-once = copyq --start-server
 exec-once = hyprpaper
 exec-once = hyprctl setcursor Catppuccin-Mocha-Dark 24
 
@@ -84,8 +86,9 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1
-# env = HYPRCURSOR_THEME,Catppuccin-Mocha-Dark
-# env = HYPRCURSOR_SIZE,24
+env = hdr,1
+env = HYPRCURSOR_THEME,Catppuccin-Mocha-Dark
+env = HYPRCURSOR_SIZE,24
 
 #####################
 ### LOOK AND FEEL ###
@@ -101,8 +104,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $blue
+    col.inactive_border = $text
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -115,7 +118,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -125,7 +128,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = $surface0
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -197,10 +200,11 @@ input {
     kb_layout = us
     follow_mouse = 1
     scroll_factor = 1
-
+    scroll_points = 0.1 0.2 0.4 0.6 0.8 1.0 1.2 1.4 1.6 1.8 2.0
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
+        scroll_factor = 0.2
         natural_scroll = true
     }
 }
@@ -236,6 +240,9 @@ bind = $mainMod, L, exec, $scrPath/lockscreen.sh
 bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, D, exec, $cliMenu
+# bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, kitty --class clipse -e clipse
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -311,3 +318,5 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = float, class:(clipse)
+windowrulev2 = size 622 652, class:(clipse)
