--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -274,6 +274,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Fullscreen apps
+bind = $mainMod, F, fullscreen
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
