hyprland config change for dolphin

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -68,6 +68,7 @@ exec-once = clipse -listen
 # exec-once = copyq --start-server
 exec-once = hyprpaper
 exec-once = hyprctl setcursor Catppuccin-Mocha-Dark 24
+exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6 --noincremental
 
 
 #############################
@@ -108,7 +109,7 @@ general {
     col.inactive_border = $text
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -216,10 +217,10 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+# device {
+#     name = epic-mouse-v1
+#     sensitivity = -0.5
+# }
 
 
 ###################
