added polkit gnome

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=eDP-1,1366x768@60,0x0,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nemo
 $menu = rofi -show drun -icon-theme "Papirus" -show-icons
 $cliMenu = rofi -show run -terminal kitty
 $scrPath = $HOME/.local/share/bin
@@ -56,7 +56,7 @@ exec-once = $scrPath/resetxdgportal.sh # reset XDPH for screenshare
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRE
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = waybar # launch the system bar
 exec-once = blueman-applet # systray app for Bluetooth
 exec-once = udiskie --no-automount --smart-tray # front-end that allows to manage removable media
@@ -67,7 +67,7 @@ exec-once = clipse -listen
 # exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 # exec-once = copyq --start-server
 exec-once = hyprpaper
-exec-once = hyprctl setcursor Catppuccin-Mocha-Dark 24
+exec-once = hyprctl setcursor Catppuccin-Mocha-Dark 20
 exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6 --noincremental
 
 
